@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T16:19:13Z",
+  "timestamp" : "2022-05-21T00:58:43Z",
   "count_outdated" : 59,
   "uniques_outdated" : 39,
-  "count" : 98,
-  "uniques" : 63,
+  "count" : 99,
+  "uniques" : 64,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -42,6 +42,13 @@
     },
     {
       "timestamp": "2022-05-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
