@@ -1,5 +1,5 @@
 {
-  "count": 39,
+  "count": 40,
   "uniques": 17,
   "clones": [
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2022-05-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
