@@ -1,3 +1,10 @@
+2022-05-21T00:58:43Z:
+* notice: last 14d: unq all: 17 40
+* notice: prev accum: outdated-unq outdated-all / unq all: 39 59 / 63 98
+* notice: next accum: outdated-unq outdated-all / unq all: 39 59 / 64 99
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-20]
+
 2022-05-20T16:19:13Z:
 * notice: last 14d: unq all: 17 39
 * notice: prev accum: outdated-unq outdated-all / unq all: 33 52 / 58 92
